--- a/PetaPoco.SqlKata/PetaPoco.SqlKata.csproj
+++ b/PetaPoco.SqlKata/PetaPoco.SqlKata.csproj
@@ -20,8 +20,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="PetaPoco.Compiled" Version="6.0.316" />
-    <PackageReference Include="SqlKata" Version="1.0.4" />
+    <PackageReference Include="PetaPoco.Compiled" Version="[6.0.316,7)" />
+    <PackageReference Include="SqlKata" Version="[1.0.4,2)" />
   </ItemGroup>
 
 </Project>
