Add IDatabase extensions

--- a/PetaPoco.SqlKata/PetaPoco.SqlKata.csproj
+++ b/PetaPoco.SqlKata/PetaPoco.SqlKata.csproj
@@ -14,7 +14,7 @@
     <RepositoryUrl>https://github.com/asherber/PetaPoco.SqlKata</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageIconUrl>https://raw.githubusercontent.com/asherber/PetaPoco.SqlKata/master/media/database-64.png</PackageIconUrl>
-    <PackageReleaseNotes>Added DefaultMapper</PackageReleaseNotes>
+    <PackageReleaseNotes>Added IDatabase extensions for basic query operations</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
