--- a/PetaPoco.SqlKata.Tests/PetaPoco.SqlKata.Tests.csproj
+++ b/PetaPoco.SqlKata.Tests/PetaPoco.SqlKata.Tests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="PetaPoco.Compiled" Version="6.0.316" />
     <PackageReference Include="SqlKata" Version="1.1.7" />
     <PackageReference Include="xunit" Version="2.3.1" />
