--- a/PetaPoco.SqlKata/PetaPoco.SqlKata.csproj
+++ b/PetaPoco.SqlKata/PetaPoco.SqlKata.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>PetaPoco.SqlKata</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Aaron Sherber</Authors>
-    <Copyright>2018-2019</Copyright>
+    <Copyright>2018-2020</Copyright>
     <PackageTags>petapoco sqlkata sql query builder</PackageTags>
     <Company />
     <Description>Extension methods for using SqlKata to generate SQL queries for PetaPoco.</Description>
@@ -14,6 +14,7 @@
     <RepositoryUrl>https://github.com/asherber/PetaPoco.SqlKata</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageIconUrl>https://raw.githubusercontent.com/asherber/PetaPoco.SqlKata/master/media/database-64.png</PackageIconUrl>
+    <PackageIcon>icon.png</PackageIcon>
     <PackageReleaseNotes>Requires v2 of SqlKata; the assembly name changed in this version from QueryBuilder.dll to SqlKata.dll.</PackageReleaseNotes>
   </PropertyGroup>
   
@@ -30,6 +31,7 @@
     </PackageReference>
     <PackageReference Include="PetaPoco.Compiled" Version="[6.0.316,7)" />
     <PackageReference Include="SqlKata" Version="[2.1,3)" />
+    <None Include="icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
