--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,13 +7,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1.100
-
       - name: Build
-        run: dotnet build -c Release -v normal
+        run: dotnet build -c Release
         
       - name: Test
         run: dotnet test -c Release --no-build -v normal
