--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build
-        run: dotnet build -c Release
+        run: dotnet build
         
       - name: Test
-        run: dotnet test -c Release --no-build -v normal
+        run: dotnet test --no-build -v normal
